# qcoin

./: .gitignore  COLLABORATION.md  Cargo.toml  LICENSE  README.md
deploy/: cluster-manifest.example.json  com.loadngo.qcoin-node.plist  network-config.10.10.10.1.example.json  qcoin-node-launch.sh  qcoin-node.env.example  qcoin-node.mac.env.example  qcoin-node.service  qcoin-single-node.ini  qcoin-single-node.service  qcoin-single-node.sh  render-node-config.sh
docs/: AGENT_HANDOFF.md  ChatGPT.md  EAB_ANCHOR_TRANSACTION_MODEL.md  FORK_CHOICE_POLICY.md  LAB_CLUSTER_WORKING_PROOF.md  LAB_SERVICE_BOOTSTRAP.md  MACMINI_SYNC_RECOVERY_README.md  MONETARY_POLICY.md  PERSISTENCE_MODEL.md  QCOIN_EXIT_GATE.md  ROLLOUT_POLICY.md  TODO_AGENT_REVIEW.md  WORK_QUEUE.md  hi.md  qcoin0.md  qcoin1.md  qcoin2.md  qcoin3.md  qcoin4.md  three-node-eab-workflow.md
qcoin-consensus/: Cargo.toml
qcoin-consensus/src/: lib.rs
qcoin-crypto/: Cargo.toml
qcoin-crypto/src/: lib.rs
qcoin-ledger/: Cargo.toml
qcoin-ledger/src/: lib.rs
qcoin-node/: Cargo.toml
qcoin-node/src/: main.rs  node.rs  wire.rs
qcoin-script/: Cargo.toml
qcoin-script/src/: lib.rs
qcoin-types/: Cargo.toml
qcoin-types/src/: lib.rs
