[package]
name = "qcoin-node"
version = "0.1.0"
edition = "2021"

[dependencies]
qcoin-types = { path = "../qcoin-types" }
qcoin-ledger = { path = "../qcoin-ledger" }
qcoin-consensus = { path = "../qcoin-consensus" }
qcoin-script = { path = "../qcoin-script" }
qcoin-crypto = { path = "../qcoin-crypto" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
